MaJ_Adrien/SourceParser.automaton
State 0:
prog' -> . prog [ # ]
-- On error shift to state 1
-- On STRUCT shift to state 2
-- On struct_decls shift to state 20
-- On prog shift to state 128
-- On VAR reduce production struct_decls -> 
-- On MAIN reduce production struct_decls -> 

State 1:
prog -> error . [ # ]
-- On # reduce production prog -> error 

State 2:
struct_decls -> STRUCT . IDENT LB field_decl RB struct_decls [ VAR MAIN ]
-- On IDENT shift to state 3

State 3:
struct_decls -> STRUCT IDENT . LB field_decl RB struct_decls [ VAR MAIN ]
-- On LB shift to state 4

State 4:
struct_decls -> STRUCT IDENT LB . field_decl RB struct_decls [ VAR MAIN ]
-- On INTEGER shift to state 5
-- On IDENT shift to state 6
-- On BOOLEAN shift to state 7
-- On typ shift to state 8
-- On field_decl shift to state 17

State 5:
typ -> INTEGER . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB IDENT GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production typ -> INTEGER 
-- On SEMI reduce production typ -> INTEGER 
-- On RP reduce production typ -> INTEGER 
-- On RB reduce production typ -> INTEGER 
-- On PLUS reduce production typ -> INTEGER 
-- On OR reduce production typ -> INTEGER 
-- On NEQ reduce production typ -> INTEGER 
-- On MOD reduce production typ -> INTEGER 
-- On MINUS reduce production typ -> INTEGER 
-- On LT reduce production typ -> INTEGER 
-- On LE reduce production typ -> INTEGER 
-- On LB reduce production typ -> INTEGER 
-- On IDENT reduce production typ -> INTEGER 
-- On GT reduce production typ -> INTEGER 
-- On GE reduce production typ -> INTEGER 
-- On EQUAL reduce production typ -> INTEGER 
-- On END reduce production typ -> INTEGER 
-- On DOT reduce production typ -> INTEGER 
-- On DIV reduce production typ -> INTEGER 
-- On COMMA reduce production typ -> INTEGER 
-- On AND reduce production typ -> INTEGER 

State 6:
typ -> IDENT . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB IDENT GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production typ -> IDENT 
-- On SEMI reduce production typ -> IDENT 
-- On RP reduce production typ -> IDENT 
-- On RB reduce production typ -> IDENT 
-- On PLUS reduce production typ -> IDENT 
-- On OR reduce production typ -> IDENT 
-- On NEQ reduce production typ -> IDENT 
-- On MOD reduce production typ -> IDENT 
-- On MINUS reduce production typ -> IDENT 
-- On LT reduce production typ -> IDENT 
-- On LE reduce production typ -> IDENT 
-- On LB reduce production typ -> IDENT 
-- On IDENT reduce production typ -> IDENT 
-- On GT reduce production typ -> IDENT 
-- On GE reduce production typ -> IDENT 
-- On EQUAL reduce production typ -> IDENT 
-- On END reduce production typ -> IDENT 
-- On DOT reduce production typ -> IDENT 
-- On DIV reduce production typ -> IDENT 
-- On COMMA reduce production typ -> IDENT 
-- On AND reduce production typ -> IDENT 

State 7:
typ -> BOOLEAN . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB IDENT GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production typ -> BOOLEAN 
-- On SEMI reduce production typ -> BOOLEAN 
-- On RP reduce production typ -> BOOLEAN 
-- On RB reduce production typ -> BOOLEAN 
-- On PLUS reduce production typ -> BOOLEAN 
-- On OR reduce production typ -> BOOLEAN 
-- On NEQ reduce production typ -> BOOLEAN 
-- On MOD reduce production typ -> BOOLEAN 
-- On MINUS reduce production typ -> BOOLEAN 
-- On LT reduce production typ -> BOOLEAN 
-- On LE reduce production typ -> BOOLEAN 
-- On LB reduce production typ -> BOOLEAN 
-- On IDENT reduce production typ -> BOOLEAN 
-- On GT reduce production typ -> BOOLEAN 
-- On GE reduce production typ -> BOOLEAN 
-- On EQUAL reduce production typ -> BOOLEAN 
-- On END reduce production typ -> BOOLEAN 
-- On DOT reduce production typ -> BOOLEAN 
-- On DIV reduce production typ -> BOOLEAN 
-- On COMMA reduce production typ -> BOOLEAN 
-- On AND reduce production typ -> BOOLEAN 

State 8:
field_decl -> typ . ident SEMI [ RB ]
field_decl -> typ . ident SEMI field_decl [ RB ]
typ -> typ . LB RB [ LB IDENT ]
-- On LB shift to state 9
-- On IDENT shift to state 11
-- On ident shift to state 14

State 9:
typ -> typ LB . RB [ LB IDENT ]
-- On RB shift to state 10

State 10:
typ -> typ LB RB . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB IDENT GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production typ -> typ LB RB 
-- On SEMI reduce production typ -> typ LB RB 
-- On RP reduce production typ -> typ LB RB 
-- On RB reduce production typ -> typ LB RB 
-- On PLUS reduce production typ -> typ LB RB 
-- On OR reduce production typ -> typ LB RB 
-- On NEQ reduce production typ -> typ LB RB 
-- On MOD reduce production typ -> typ LB RB 
-- On MINUS reduce production typ -> typ LB RB 
-- On LT reduce production typ -> typ LB RB 
-- On LE reduce production typ -> typ LB RB 
-- On LB reduce production typ -> typ LB RB 
-- On IDENT reduce production typ -> typ LB RB 
-- On GT reduce production typ -> typ LB RB 
-- On GE reduce production typ -> typ LB RB 
-- On EQUAL reduce production typ -> typ LB RB 
-- On END reduce production typ -> typ LB RB 
-- On DOT reduce production typ -> typ LB RB 
-- On DIV reduce production typ -> typ LB RB 
-- On COMMA reduce production typ -> typ LB RB 
-- On AND reduce production typ -> typ LB RB 

State 11:
ident -> IDENT . COMMA ident [ SEMI ]
ident -> IDENT . [ SEMI ]
-- On COMMA shift to state 12
-- On SEMI reduce production ident -> IDENT 

State 12:
ident -> IDENT COMMA . ident [ SEMI ]
-- On IDENT shift to state 11
-- On ident shift to state 13

State 13:
ident -> IDENT COMMA ident . [ SEMI ]
-- On SEMI reduce production ident -> IDENT COMMA ident 

State 14:
field_decl -> typ ident . SEMI [ RB ]
field_decl -> typ ident . SEMI field_decl [ RB ]
-- On SEMI shift to state 15

State 15:
field_decl -> typ ident SEMI . [ RB ]
field_decl -> typ ident SEMI . field_decl [ RB ]
-- On INTEGER shift to state 5
-- On IDENT shift to state 6
-- On BOOLEAN shift to state 7
-- On typ shift to state 8
-- On field_decl shift to state 16
-- On RB reduce production field_decl -> typ ident SEMI 

State 16:
field_decl -> typ ident SEMI field_decl . [ RB ]
-- On RB reduce production field_decl -> typ ident SEMI field_decl 

State 17:
struct_decls -> STRUCT IDENT LB field_decl . RB struct_decls [ VAR MAIN ]
-- On RB shift to state 18

State 18:
struct_decls -> STRUCT IDENT LB field_decl RB . struct_decls [ VAR MAIN ]
-- On STRUCT shift to state 2
-- On struct_decls shift to state 19
-- On VAR reduce production struct_decls -> 
-- On MAIN reduce production struct_decls -> 

State 19:
struct_decls -> STRUCT IDENT LB field_decl RB struct_decls . [ VAR MAIN ]
-- On VAR reduce production struct_decls -> STRUCT IDENT LB field_decl RB struct_decls 
-- On MAIN reduce production struct_decls -> STRUCT IDENT LB field_decl RB struct_decls 

State 20:
prog -> struct_decls . var_decls main EOF [ # ]
-- On VAR shift to state 21
-- On var_decls shift to state 26
-- On MAIN reduce production var_decls -> 

State 21:
var_decls -> VAR . typ ident SEMI var_decls [ MAIN ]
-- On INTEGER shift to state 5
-- On IDENT shift to state 6
-- On BOOLEAN shift to state 7
-- On typ shift to state 22

State 22:
typ -> typ . LB RB [ LB IDENT ]
var_decls -> VAR typ . ident SEMI var_decls [ MAIN ]
-- On LB shift to state 9
-- On IDENT shift to state 11
-- On ident shift to state 23

State 23:
var_decls -> VAR typ ident . SEMI var_decls [ MAIN ]
-- On SEMI shift to state 24

State 24:
var_decls -> VAR typ ident SEMI . var_decls [ MAIN ]
-- On VAR shift to state 21
-- On var_decls shift to state 25
-- On MAIN reduce production var_decls -> 

State 25:
var_decls -> VAR typ ident SEMI var_decls . [ MAIN ]
-- On MAIN reduce production var_decls -> VAR typ ident SEMI var_decls 

State 26:
prog -> struct_decls var_decls . main EOF [ # ]
-- On MAIN shift to state 27
-- On main shift to state 126

State 27:
main -> MAIN . block [ EOF ]
-- On BEGIN shift to state 28
-- On block shift to state 125

State 28:
block -> BEGIN . localised_instruction END [ SEMI RP LP EOF END ELSE ELIF COMMA ]
-- On WHILE shift to state 29
-- On PRINT shift to state 79
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IF shift to state 83
-- On IDENT shift to state 99
-- On FOR shift to state 100
-- On CONTINUE shift to state 102
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On BREAK shift to state 103
-- On location shift to state 104
-- On localised_instruction shift to state 123
-- On localised_expression shift to state 110
-- On instruction shift to state 116
-- On expression shift to state 50
-- On SEMI reduce production instruction -> 
-- On END reduce production instruction -> 

State 29:
instruction -> WHILE . LP localised_expression RP block [ SEMI RP END COMMA ]
-- On LP shift to state 30

State 30:
instruction -> WHILE LP . localised_expression RP block [ SEMI RP END COMMA ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 76
-- On expression shift to state 50

State 31:
expression -> NOT . localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 75
-- On expression shift to state 50

State 32:
expression -> NEW . typ LB localised_expression RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> NEW . typ [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On INTEGER shift to state 5
-- On IDENT shift to state 6
-- On BOOLEAN shift to state 7
-- On typ shift to state 33

State 33:
expression -> NEW typ . LB localised_expression RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> NEW typ . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
typ -> typ . LB RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On LB shift to state 34
-- On STAR reduce production expression -> NEW typ 
-- On SEMI reduce production expression -> NEW typ 
-- On RP reduce production expression -> NEW typ 
-- On RB reduce production expression -> NEW typ 
-- On PLUS reduce production expression -> NEW typ 
-- On OR reduce production expression -> NEW typ 
-- On NEQ reduce production expression -> NEW typ 
-- On MOD reduce production expression -> NEW typ 
-- On MINUS reduce production expression -> NEW typ 
-- On LT reduce production expression -> NEW typ 
-- On LE reduce production expression -> NEW typ 
-- On LB reduce production expression -> NEW typ 
-- On GT reduce production expression -> NEW typ 
-- On GE reduce production expression -> NEW typ 
-- On EQUAL reduce production expression -> NEW typ 
-- On END reduce production expression -> NEW typ 
-- On DOT reduce production expression -> NEW typ 
-- On DIV reduce production expression -> NEW typ 
-- On COMMA reduce production expression -> NEW typ 
-- On AND reduce production expression -> NEW typ 
** Conflict on LB

State 34:
expression -> NEW typ LB . localised_expression RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
typ -> typ LB . RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On RB shift to state 10
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 73
-- On expression shift to state 50

State 35:
expression -> MINUS . localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 72
-- On expression shift to state 50

State 36:
expression -> LP . localised_expression RP [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 40
-- On expression shift to state 50

State 37:
expression -> IDENT . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production expression -> IDENT 
-- On SEMI reduce production expression -> IDENT 
-- On RP reduce production expression -> IDENT 
-- On RB reduce production expression -> IDENT 
-- On PLUS reduce production expression -> IDENT 
-- On OR reduce production expression -> IDENT 
-- On NEQ reduce production expression -> IDENT 
-- On MOD reduce production expression -> IDENT 
-- On MINUS reduce production expression -> IDENT 
-- On LT reduce production expression -> IDENT 
-- On LE reduce production expression -> IDENT 
-- On LB reduce production expression -> IDENT 
-- On GT reduce production expression -> IDENT 
-- On GE reduce production expression -> IDENT 
-- On EQUAL reduce production expression -> IDENT 
-- On END reduce production expression -> IDENT 
-- On DOT reduce production expression -> IDENT 
-- On DIV reduce production expression -> IDENT 
-- On COMMA reduce production expression -> IDENT 
-- On AND reduce production expression -> IDENT 

State 38:
expression -> CONST_INT . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production expression -> CONST_INT 
-- On SEMI reduce production expression -> CONST_INT 
-- On RP reduce production expression -> CONST_INT 
-- On RB reduce production expression -> CONST_INT 
-- On PLUS reduce production expression -> CONST_INT 
-- On OR reduce production expression -> CONST_INT 
-- On NEQ reduce production expression -> CONST_INT 
-- On MOD reduce production expression -> CONST_INT 
-- On MINUS reduce production expression -> CONST_INT 
-- On LT reduce production expression -> CONST_INT 
-- On LE reduce production expression -> CONST_INT 
-- On LB reduce production expression -> CONST_INT 
-- On GT reduce production expression -> CONST_INT 
-- On GE reduce production expression -> CONST_INT 
-- On EQUAL reduce production expression -> CONST_INT 
-- On END reduce production expression -> CONST_INT 
-- On DOT reduce production expression -> CONST_INT 
-- On DIV reduce production expression -> CONST_INT 
-- On COMMA reduce production expression -> CONST_INT 
-- On AND reduce production expression -> CONST_INT 

State 39:
expression -> CONST_BOOL . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production expression -> CONST_BOOL 
-- On SEMI reduce production expression -> CONST_BOOL 
-- On RP reduce production expression -> CONST_BOOL 
-- On RB reduce production expression -> CONST_BOOL 
-- On PLUS reduce production expression -> CONST_BOOL 
-- On OR reduce production expression -> CONST_BOOL 
-- On NEQ reduce production expression -> CONST_BOOL 
-- On MOD reduce production expression -> CONST_BOOL 
-- On MINUS reduce production expression -> CONST_BOOL 
-- On LT reduce production expression -> CONST_BOOL 
-- On LE reduce production expression -> CONST_BOOL 
-- On LB reduce production expression -> CONST_BOOL 
-- On GT reduce production expression -> CONST_BOOL 
-- On GE reduce production expression -> CONST_BOOL 
-- On EQUAL reduce production expression -> CONST_BOOL 
-- On END reduce production expression -> CONST_BOOL 
-- On DOT reduce production expression -> CONST_BOOL 
-- On DIV reduce production expression -> CONST_BOOL 
-- On COMMA reduce production expression -> CONST_BOOL 
-- On AND reduce production expression -> CONST_BOOL 

State 40:
expression -> localised_expression . LB localised_expression RB [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> LP localised_expression . RP [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . PLUS localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . MINUS localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . STAR localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . DIV localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . MOD localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . EQUAL localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . NEQ localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . LT localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . LE localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . GT localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . GE localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . AND localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . OR localised_expression [ STAR RP PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
-- On STAR shift to state 41
-- On RP shift to state 71
-- On PLUS shift to state 46
-- On OR shift to state 53
-- On NEQ shift to state 55
-- On MOD shift to state 48
-- On MINUS shift to state 57
-- On LT shift to state 59
-- On LE shift to state 61
-- On LB shift to state 43
-- On GT shift to state 63
-- On GE shift to state 65
-- On EQUAL shift to state 67
-- On DIV shift to state 51
-- On AND shift to state 69

State 41:
expression -> localised_expression STAR . localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 42
-- On expression shift to state 50

State 42:
expression -> localised_expression . LB localised_expression RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . PLUS localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . MINUS localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . STAR localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression STAR localised_expression . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . DIV localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . MOD localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . EQUAL localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . NEQ localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . LT localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . LE localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . GT localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . GE localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . AND localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . OR localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On LB shift to state 43
-- On STAR reduce production expression -> localised_expression STAR localised_expression 
-- On SEMI reduce production expression -> localised_expression STAR localised_expression 
-- On RP reduce production expression -> localised_expression STAR localised_expression 
-- On RB reduce production expression -> localised_expression STAR localised_expression 
-- On PLUS reduce production expression -> localised_expression STAR localised_expression 
-- On OR reduce production expression -> localised_expression STAR localised_expression 
-- On NEQ reduce production expression -> localised_expression STAR localised_expression 
-- On MOD reduce production expression -> localised_expression STAR localised_expression 
-- On MINUS reduce production expression -> localised_expression STAR localised_expression 
-- On LT reduce production expression -> localised_expression STAR localised_expression 
-- On LE reduce production expression -> localised_expression STAR localised_expression 
-- On GT reduce production expression -> localised_expression STAR localised_expression 
-- On GE reduce production expression -> localised_expression STAR localised_expression 
-- On EQUAL reduce production expression -> localised_expression STAR localised_expression 
-- On END reduce production expression -> localised_expression STAR localised_expression 
-- On DOT reduce production expression -> localised_expression STAR localised_expression 
-- On DIV reduce production expression -> localised_expression STAR localised_expression 
-- On COMMA reduce production expression -> localised_expression STAR localised_expression 
-- On AND reduce production expression -> localised_expression STAR localised_expression 

State 43:
expression -> localised_expression LB . localised_expression RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 44
-- On expression shift to state 50

State 44:
expression -> localised_expression . LB localised_expression RB [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression LB localised_expression . RB [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
expression -> localised_expression . PLUS localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . MINUS localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . STAR localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . DIV localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . MOD localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . EQUAL localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . NEQ localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . LT localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . LE localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . GT localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . GE localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . AND localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
expression -> localised_expression . OR localised_expression [ STAR RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL DIV AND ]
-- On STAR shift to state 41
-- On RB shift to state 45
-- On PLUS shift to state 46
-- On OR shift to state 53
-- On NEQ shift to state 55
-- On MOD shift to state 48
-- On MINUS shift to state 57
-- On LT shift to state 59
-- On LE shift to state 61
-- On LB shift to state 43
-- On GT shift to state 63
-- On GE shift to state 65
-- On EQUAL shift to state 67
-- On DIV shift to state 51
-- On AND shift to state 69

State 45:
expression -> localised_expression LB localised_expression RB . [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On STAR reduce production expression -> localised_expression LB localised_expression RB 
-- On SEMI reduce production expression -> localised_expression LB localised_expression RB 
-- On RP reduce production expression -> localised_expression LB localised_expression RB 
-- On RB reduce production expression -> localised_expression LB localised_expression RB 
-- On PLUS reduce production expression -> localised_expression LB localised_expression RB 
-- On OR reduce production expression -> localised_expression LB localised_expression RB 
-- On NEQ reduce production expression -> localised_expression LB localised_expression RB 
-- On MOD reduce production expression -> localised_expression LB localised_expression RB 
-- On MINUS reduce production expression -> localised_expression LB localised_expression RB 
-- On LT reduce production expression -> localised_expression LB localised_expression RB 
-- On LE reduce production expression -> localised_expression LB localised_expression RB 
-- On LB reduce production expression -> localised_expression LB localised_expression RB 
-- On GT reduce production expression -> localised_expression LB localised_expression RB 
-- On GE reduce production expression -> localised_expression LB localised_expression RB 
-- On EQUAL reduce production expression -> localised_expression LB localised_expression RB 
-- On END reduce production expression -> localised_expression LB localised_expression RB 
-- On DOT reduce production expression -> localised_expression LB localised_expression RB 
-- On DIV reduce production expression -> localised_expression LB localised_expression RB 
-- On COMMA reduce production expression -> localised_expression LB localised_expression RB 
-- On AND reduce production expression -> localised_expression LB localised_expression RB 

State 46:
expression -> localised_expression PLUS . localised_expression [ STAR SEMI RP RB PLUS OR NEQ MOD MINUS LT LE LB GT GE EQUAL END DOT DIV COMMA AND ]
-- On NOT shift to state 31
-- On NEW shift to state 32
-- On MINUS shift to state 35
-- On LP shift to state 36
-- On IDENT shift to state 37
-- On CONST_INT shift to state 38
-- On CONST_BOOL shift to state 39
-- On localised_expression shift to state 47
-- On expression shift to state 50
